update about, skill page

--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Nguyen Minh Danh CV"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>iamPhong | My CV</title>
+    <title>Danh Nguyen | React CV</title>
     <!-- Styles -->
-		<link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css">
+		<link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
 		<link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome.min.css">
-		<link rel="stylesheet" href="%PUBLIC_URL%/css/tootik.css">
-		<link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
-		<link rel="stylesheet" href="%PUBLIC_URL%/css/swiper.css">
-		<link rel="stylesheet" href="%PUBLIC_URL%/css/animate.css">
+		<link rel="stylesheet" href="%PUBLIC_URL%/css/main.css">
+		<link rel="stylesheet" href="%PUBLIC_URL%/css/aos.css">
 		<link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 		<!-- Light & Dark Color -->
 		<link rel="stylesheet" id="light-dark" href="%PUBLIC_URL%/css/colors/light.css">
@@ -34,15 +32,17 @@
     <div class="content" id="root"></div>
   </body>
   <!-- #JQUERY-PLUGINS# -->
-  <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.3.2.1.min.js"></script>
   <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
-  <script src="%PUBLIC_URL%/js/jquery.magnific-popup.min.js"></script>
-  <script src="%PUBLIC_URL%/js/swiper.min.js"></script>
-  <script src="%PUBLIC_URL%/js/jquery.easypiechart.min.js"></script>
-  <script src="%PUBLIC_URL%/js/wow.min.js"></script>
-  <script src="%PUBLIC_URL%/js/validator.min.js"></script>
-  <script src="%PUBLIC_URL%/js/form-scripts.js"></script>
   <script src="%PUBLIC_URL%/js/script.js"></script>
+  <script src="%PUBLIC_URL%/js/popper.min.js"></script>
+  <script src="%PUBLIC_URL%/js/aos.js"></script>
+  <script src="%PUBLIC_URL%/js/now-ui-kit.js"></script>
+  <script src="%PUBLIC_URL%/js/bootstrap-datepicker.js"></script>
+  <script src="%PUBLIC_URL%/js/bootstrap-switch.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.sharrre.js"></script>
+  <script src="%PUBLIC_URL%/js/nouislider.min.js"></script>
+  <script src="%PUBLIC_URL%/js/main.js"></script>
   <script>
     $(function() {
       $('.chart').easyPieChart({
